Fixed the team selection for login, editted the shift and teams api's to not show disabled users

--- a/app/Resources/assets/styles/styles.scss
+++ b/app/Resources/assets/styles/styles.scss
@@ -67,9 +67,9 @@ body {
     z-index: 9;
 
     img {
-        width: 42px;
-        margin-top: 16px;
-        margin-left: 11px;
+        width: 46px;
+        margin-top: 14px;
+        margin-left: 9px;
     }
 
     &::after {
